k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-kube
  labels:
    app: ci-cd-kube
spec:
  type: ClusterIP
  selector:
    app: ci-cd-kube
  ports:
    - name: http
      port: 80
      targetPort: http
