k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ci-cd-kube
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - etudiant-03-ci-cd-kube.development.atelier.ovh
      secretName: ci-cd-kube-tls
  rules:
    - host: etudiant-03-ci-cd-kube.development.atelier.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ci-cd-kube
                port:
                  number: 80
